--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,8 @@ body.dark-mode {
 }
 
 .container {
-  width: 100%;
-  max-width: 600px;  
+  width: 95%;
+  max-width: 550px;  
   margin: auto;
   padding: 30px;
   background: rgba(255, 255, 255, 0.8);
@@ -120,6 +120,9 @@ body.dark-mode li {
   border-radius: 5px;
   cursor: pointer;
   float: right;
+  transition: 0.3s;
+  position: relative;
+  top: -35px;  
 }
 
 .delete-btn:hover {
@@ -154,5 +157,11 @@ body.dark-mode li {
       right: 10px;
       padding: 8px;
       font-size: 14px;
+      width: auto;      
   }
+
+  .delete-btn {
+    width: auto; /* Evita que el botón de eliminar sea demasiado ancho */
+    padding: 8px 12px;
+}
 }
